[package]
name = "boxer"
version = "0.1.0"
edition = "2021"

[features]

[[bin]] # Bin to run the gRPC server
name = "server"
path = "src/server.rs"

[lib]  # dummy library
name = "lib"
path = "src/lib.rs"

[dependencies]
xproto = { path = "../../libraries/xproto" }
tonic = { workspace = true }
serde = { workspace = true }
prost = { workspace = true }
tokio = { workspace = true }
