[package]
name = "boxer"
version = "0.2.0"
edition = "2021"
rust-version = "1.88"

[lib]
name = "boxer"
path = "src/lib.rs"

[[bin]]
name = "boxer"
path = "src/main.rs"

[dependencies]
pgwire-replication = "0.2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls-webpki-roots"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bytes = "1"
url = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "io-util", "signal", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

